--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "leaflet": "^1.9.4"
+        "font-awesome": "^4.7.0",
+        "leaflet": "^1.9.4",
+        "leaflet-control-geocoder": "^2.4.0"
     }
 }
