create model & add feature find ATM

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dependencies": {
         "font-awesome": "^4.7.0",
         "leaflet": "^1.9.4",
-        "leaflet-control-geocoder": "^2.4.0"
+        "leaflet-control-geocoder": "^2.4.0",
+        "leaflet-routing-machine": "^3.2.12",
+        "leaflet.locatecontrol": "^0.79.0"
     }
 }
